--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react": "^15.2.1",
     "react-bootstrap": "^0.30.2",
     "react-dom": "^15.2.1",
+    "react-input-range": "^0.9.1",
+    "react-rangeslider": "^1.0.3",
     "rimraf": "^2.5.4",
     "serve-favicon": "~2.3.0",
     "webpack": "^1.13.1"
