--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Auth0",
   "license": "MIT",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "postinstall": "rimraf public/javascripts && cross-env NODE_ENV=production webpack --config ./webpack.prod.config.js --progress --profile --colors"
   },
   "dependencies": {
     "babel-core": "^6.11.4",
